--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
   <script>
     /* Per-section background controls */
     const BG_CONFIG = {
-      hero:     { opacity: 0.03, speed: 0.6 },
-      for:      { opacity: 0.03, speed: 0.6 },
-      action:   { opacity: 0.03, speed: 0.6 },
-      truth:    { opacity: 0.03, speed: 0.6 },
-      work:     { opacity: 0.03, speed: 0.6 },
-      trust:    { opacity: 0.03, speed: 0.6 },
-      'trust-2':{ opacity: 0.01, speed: 0.3 }
+      hero:     { opacity: 0.03, speed: 0.6 !important},
+      for:      { opacity: 0.03, speed: 0.6 !important},
+      action:   { opacity: 0.03, speed: 0.6 !important},
+      truth:    { opacity: 0.03, speed: 0.6 !important},
+      work:     { opacity: 0.03, speed: 0.6 !important},
+      trust:    { opacity: 0.03, speed: 0.6 !important},
+      trust-2:  { opacity: 0.01, speed: 0.3 !important}
     };
 
     /* Sections */
@@ -373,4 +373,5 @@ document.querySelectorAll('.stack-section').forEach(s => bgObserver.observe(s));
   </script>
 </body>
 </html>
+
 
