--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       truth:    { opacity: 0.03, speed: 0.6 },
       work:     { opacity: 0.03, speed: 0.6 },
       trust:    { opacity: 0.03, speed: 0.6 },
-      trust-2:  { opacity: 0.01, speed: 0.3 }
+      'trust-2':{ opacity: 0.03, speed: 0.6 }
     };
 
     /* Sections */
@@ -373,6 +373,3 @@ document.querySelectorAll('.stack-section').forEach(s => bgObserver.observe(s));
   </script>
 </body>
 </html>
-
-
-
