--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   /* State for final reveal */
   :root.final-reveal {
     --page-bg:#FFFFFF;     /* pure white */
-    --video-opacity:0.01;  /* soften texture at end */
+    --video-opacity:0.001;  /* soften texture at end */
   }
 
   *{ box-sizing:border-box; margin:0; padding:0; }
@@ -187,7 +187,7 @@
       truth:    { opacity: 0.03, speed: 0.6 },
       work:     { opacity: 0.03, speed: 0.6 },
       trust:    { opacity: 0.03, speed: 0.6 },
-      'trust-2':{ opacity: 0.03, speed: 0.6 }
+      trust-2:  { opacity: 0.001, speed: 0.2 }
     };
 
     /* Sections */
@@ -373,3 +373,4 @@ document.querySelectorAll('.stack-section').forEach(s => bgObserver.observe(s));
   </script>
 </body>
 </html>
+
