--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     --page-bg:#fffcf8;    /* background */
     --ink:#13294B;        /* text color */
     --video-opacity:0.03; /* default video opacity */
+    --video-speed:0.05;
     --tint-opacity:0.00;  /* optional tiny color cast */
   }
 
@@ -187,7 +188,7 @@
       truth:    { opacity: 0.03, speed: 0.6 },
       work:     { opacity: 0.03, speed: 0.6 },
       trust:    { opacity: 0.03, speed: 0.6 },
-      'trust-2':{ opacity: 0.03, speed: 0.6 }
+      'trust-2':{ opacity: 0.01, speed: 0.2 }
     };
 
     /* Sections */
@@ -373,5 +374,6 @@ document.querySelectorAll('.stack-section').forEach(s => bgObserver.observe(s));
   </script>
 </body>
 </html>
+
 
 
